# kiosk-projects

./: .gitignore
.openclaw/: workspace-state.json
alan/: CORE_AGENT.md
chloe/: CORE_AGENT.md
kai/: CORE_AGENT.md
maya/: AGENT.md  CORE_AGENT.md
maya/reports/: investor-pitch-summary.md  teacher-assistant-strategy-analysis.md
quinn/: CORE_AGENT.md
zane/: CORE_AGENT.md
zane/cv-algorithms/: README.md
zane/hardware-opt/: README.md
zane/integration/: README.md
zane/performance/: CMakeLists.txt  PROGRESS_REPORT.md  README.md  benchmark.cpp  benchmark.h  face_detection_benchmark.cpp  integration_test.cpp  test_benchmark.cpp
zane/profiling/: README.md
zane/real-time/: CMakeLists.txt  README.md  benchmark_camera.sh  camera_capture.cpp  camera_capture.h  camera_capture_README.md  face_detection.cpp  face_detection.h  test_camera.cpp  test_face_detection.cpp
